--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.1.1"
+    "mongoose": "^7.1.1",
+    "slugify": "^1.6.6"
   }
 }
